--- a/index.html
+++ b/index.html
@@ -12,7 +12,8 @@
           margin: 0;
           min-height: 100vh ;
           min-width: 100vw ;
-          user-select: none }
+          -webkit-user-select: none;
+        user-select: none }
         .grid-container {
           display: grid;
           width: min(100vw,70vh ); ;
@@ -29,7 +30,8 @@
                                 "J1 A1 B1 C1 D1 E1 F1 G1 H1 I1" 
                                 "J0 A0 B0 C0 D0 E0 F0 G0 H0 I0";
           grid-template-columns:  10px 1fr 1fr 1fr 1fr 1fr 1fr 1fr 1fr 10px;
-          user-select: none }
+          -webkit-user-select: none;
+        user-select: none }
         .grid-item {
           border: 1px solid rgba(0, 0, 0, 0.8); 
           aspect-ratio: 1 !important ;
@@ -39,12 +41,14 @@
           align-content: center;
           flex-direction: column;
           text-align: center;
-          user-select: none }
+          -webkit-user-select: none;
+        user-select: none }
         .grid-item-empty {
           aspect-ratio: 1 !important ; 
           font-size: min(3vw,2vh ); 
           height: 2px;
-          user-select: none }
+          -webkit-user-select: none;
+        user-select: none }
         .grid-item-index-up {
           aspect-ratio: 1 !important ;
           font-size: min(3vw,2vh );
@@ -55,7 +59,8 @@
           align-content: center;
           flex-direction: column;
           text-align:center ;
-          user-select: none}
+          -webkit-user-select: none;
+        user-select: none}
         .grid-item-index-down {
           aspect-ratio: 1 !important ;
           font-size: min(3vw,2vh );
@@ -66,7 +71,8 @@
           align-content: center;
           flex-direction: column;
           text-align: center;
-          user-select: none}
+          -webkit-user-select: none;
+        user-select: none}
         .grid-item-index {
           aspect-ratio: 1 !important ; 
           font-size: min(3vw,2vh ); 
@@ -77,7 +83,8 @@
           align-content: center;
           flex-direction: column;
           text-align: center;
-          user-select: none}
+          -webkit-user-select: none;
+        user-select: none}
         .replaynow {
           display: flex;
           width: max-content;
@@ -98,28 +105,32 @@
           text-align: center;
           margin: auto;
           font-size: 6vw;
-          user-select: none }
+          -webkit-user-select: none;
+        user-select: none }
         .Replay_disabled {
           color: rgb(71, 71, 71);
           background-color: rgba(129, 129, 129, 0.785);
           text-align: center;
           margin: auto;
           font-size: 6vw;
-          user-select: none}
+          -webkit-user-select: none;
+        user-select: none}
         .log_name {
           color: rgb(59, 62, 255);
           background-color: rgba(129, 129, 129, 0.152);
           text-align: center;
           margin: auto;
           font-size: 6vw;
-          user-select: none }
+          -webkit-user-select: none;
+        user-select: none }
         .log_name_disabled {
           color: rgb(71, 71, 71);
           background-color: rgba(129, 129, 129, 0.785);
           text-align: center;
           margin: auto;
           font-size: 6vw;
-          user-select: none }
+          -webkit-user-select: none;
+        user-select: none }
         .name {
           width: 30vw;
           text-align: center;
@@ -140,7 +151,8 @@
           width: 100%;
           text-align: center; 
           margin: auto;
-          user-select: none}
+          -webkit-user-select: none;
+        user-select: none}
         .undo {
           width: max-content;
           color: rgb(59, 62, 255);
@@ -150,25 +162,29 @@
           margin-top: 10px;
           margin-bottom: 10px;
           font-size: 6vw;
-          user-select: none }
+          -webkit-user-select: none;
+        user-select: none }
         .title {
           font-size: 9vw;
           width: max-content;
           text-align: center; 
           margin: auto;
-          user-select: none}
+          -webkit-user-select: none;
+        user-select: none}
         .score1 {
         display: none;
         width: 100%;
         text-align: center; 
         margin: auto;
         font-size: 8vw;
+      -webkit-user-select: none;
         user-select: none}
         .score12 {
         width: 100%;
         text-align: center; 
         margin: auto;
         font-size: 8vw;
+      -webkit-user-select: none;
         user-select: none}
         .score {
           width: 100%;
@@ -177,7 +193,8 @@
           margin-top: 1vh;
           font-size: 8vw;
           border: 1px solid rgba(0, 0, 0, 0.8);
-          user-select: none}
+          -webkit-user-select: none;
+        user-select: none}
         .btn15 {
           background-color: #ffa44f;
           font-size: 8vw;
@@ -188,7 +205,8 @@
           text-align: center; 
           margin: auto;
           font-size: 4vw;
-          user-select: none}
+          -webkit-user-select: none;
+        user-select: none}
         @media (aspect-ratio > 400/580) {
             .replaynow{
                 margin-top: 5vh ;
@@ -699,7 +717,7 @@ function quitgame() {
     if (quit === 0){
         quit = 1;
         document.getElementById("credit").innerHTML = "press again to quit";
-        alert(" ---     Are You Sure ?     --- \n --- Press Again To Quit --- ")
+        alert(" ---     Are You Sure ?     --- \n --- Press Again To Quit --- \n    This is a tunisian game    \nmade by Mohamed Amine Hmida")
     } else {
         if (offlinegame === 0) {
         sendmove("quitting");
